@@ -33,6 +33,9 @@ if (nargin ~= 1)
     return
 endif
 
-result = strcmp (interval.dec, "ill");
+## NaI is internally stored as a scalar empty interval with ill decoration.
+## Therefore, we do not have to perform an expensive strcmp operation on large
+## matrices when it suffices to look at the number of elements.
+result = numel (interval.dec) == 1 && strcmp (interval.dec, "ill");
 
-return
+endfunction
