@@ -1,44 +1,0 @@
-## Copyright 2014 Oliver Heimlich
-##
-## This program is free software; you can redistribute it and/or modify
-## it under the terms of the GNU General Public License as published by
-## the Free Software Foundation; either version 3 of the License, or
-## (at your option) any later version.
-##
-## This program is distributed in the hope that it will be useful,
-## but WITHOUT ANY WARRANTY; without even the implied warranty of
-## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-## GNU General Public License for more details.
-##
-## You should have received a copy of the GNU General Public License
-## along with this program; if not, see <http://www.gnu.org/licenses/>.
-
-## -*- texinfo -*-
-## @documentencoding utf-8
-## @deftypefn {Function File} {} issingleton (@var{X})
-## 
-## Check if the interval represents a set that contains a single real only.
-##
-## Evaluated on interval matrices, this functions is applied element-wise.
-##
-## @seealso{@@infsupdec/eq, @@infsupdec/isentire, @@infsupdec/isempty}
-## @end deftypefn
-
-## Author: Oliver Heimlich
-## Keywords: interval
-## Created: 2014-10-13
-
-function result = issingleton (x)
-
-if (nargin ~= 1)
-    print_usage ();
-    return
-endif
-
-if (isnai (x))
-    error ("interval comparison with NaI")
-endif
-
-result = issingleton (intervalpart (x));
-
-return
